--- a/Prelude-Part-V.qmd
+++ b/Prelude-Part-V.qmd
@@ -6,9 +6,15 @@ source("files/11_two_means.R")
 
 ```
 
-在進入學習統計方法的各章節之前，我(譯者)想要向同學們介紹另一份由丹麥奧爾堡大學(Aalborg University)溝通與心理學系(Department of Communication and Psychology)Jonas Lindeløv教授編寫的教程**基礎統計方法的線性模型學習取向**[^V-1]。 決定翻譯本書之前，我一直有如何統整推論統計方法學習課表的苦惱。見到Lindeløv的教程，還有採用jamovi與JASP試編教材之後，發覺這是一套值得華文世界的學生及統計學教師認識的教程。其實本書原作者Dani也在 @sec-ANOVA-as-a-linear-model 提到相同的觀念，只是這個觀念在原書的章節編排，一直走到多因子變異數分析，Dani才告訴讀者。
+在進入學習統計方法的各章節之前，我(譯者)想要向同學們介紹另一份由丹麥奧爾堡大學(Aalborg University)溝通與心理學系(Department of Communication and Psychology)Jonas Lindeløv教授編寫的教程**基礎統計方法的線性模型學習取向**[^V-1]。 決定翻譯本書之前，我一直有如何統整推論統計方法學習課表的苦惱。見到Lindeløv的教程，還有採用jamovi與JASP試編教材之後，發覺這是一套值得華文世界的學生及統計學教師認識的教程。其實本書原作者Dani也在 @sec-ANOVA-as-a-linear-model 提到相同的觀念，只是在原書的章節編排，一路走到多因子變異數分析，Dani才告訴讀者這個觀念。
 
-在Lindeløv的原版教程發表後不到一年來，就由世界各地有志一同的教師翻譯成各國語言的版本，簡体中文版已由著名的網路統計知識交流學習論壇[統計之都](https://cosx.org/)的網友協作完成[^V-2]。由於簡体中文與繁體中文的統計學術語有別，而且Lindeløv的教程是以R語言為例，因此藉由翻譯這本**用jamovi上手統計學**的機會，我將原書的第五部分章節重新排列，改成如同Lindeløv教程一樣的順序，並在適當的段落，置入譯註提示讀者關於Lindeløv教程的說明及示範。在每一章屬於基礎統計方法的範例，都會附上一份包含線性模型版示範檔案。從 @sec-Correlation-and-linear-regression 到 @sec-Categorical-data-analysis 標示示範檔案的部分，我都會在增加的**譯註**置入取得線性模型版示範檔案的連結。示範檔案裡有關線性模型版示範檔案的說明，都會集中於這個章節。讀者可根據學習進度，參考譯註提示，回到這個章節取得檔案及閱讀參考說明。
+在Lindeløv的原版教程發表後不到一年來，就由世界各地有志一同的教師翻譯成各國語言的版本，簡体中文版已由著名的網路統計知識交流學習論壇[統計之都](https://cosx.org/)的網友協作完成[^V-2]。由於簡体中文與繁體中文的統計學術語有別，而且Lindeløv的教程是以R語言為例，所以特別設計這個中途單元，說明如何採用Lindeløv的教程學習單元10到單元14。
+
+最新的中文版雖然維持與英文版相同的單元順序與內容翻譯，單元10到單元14都會在開頭增加說明，如何依照線性模型學習取向學習統計方法的建議。譯者使用這本電子書授課的線上課程，有特製系列影片，示範如何按照線性模型學習取向認識各種統計方法的概念及操作。這些單元的範例，都會附上一份包含線性模型版示範檔案。從 @sec-Correlation-and-linear-regression 到 @sec-Categorical-data-analysis 標示示範檔案的部分，我都會在增加的**譯註**置入取得線性模型版示範檔案的連結。示範檔案裡有關線性模型版示範檔案的說明，都會集中於這個章節。讀者可根據學習進度，參考譯註提示，回到這個章節取得檔案及閱讀參考說明。
+
+<!---
+因此藉由翻譯這本**用jamovi上手統計學**的機會，我將原書的第五部分章節重新排列，改成如同Lindeløv教程一樣的順序，並在適當的段落，置入譯註提示讀者關於Lindeløv教程的說明及示範。--->
+
 
 ## 教程前言 {-}
 
