--- a/02-A-brief-introduction-to-research-design.qmd
+++ b/02-A-brief-introduction-to-research-design.qmd
@@ -375,7 +375,9 @@ But are they ordinal scale or interval scale? One argument says that we can't re
 
 ## 測量的信度 {#sec-Assessing-the-reliability-of-a-measurement}
 
-At this point we've thought a little bit about how to operationalise a theoretical construct and thereby create a psychological measure. And we've seen that by applying psychological measures we end up with variables, which can come in many different types. At this point, we should start discussing the obvious question: is the measurement any good? We'll do this in terms of two related ideas: *reliability* and *validity*. Put simply, the **reliability** of a measure tells you how precisely you are measuring something, whereas the validity of a measure tells you how accurate the measure is. In this section I'll talk about reliability; we'll talk about validity in in the section on [Assessing the validity of a study].
+(以下為AI初翻，尚待校稿)
+
+<!--- At this point we've thought a little bit about how to operationalise a theoretical construct and thereby create a psychological measure. And we've seen that by applying psychological measures we end up with variables, which can come in many different types. At this point, we should start discussing the obvious question: is the measurement any good? We'll do this in terms of two related ideas: *reliability* and *validity*. Put simply, the **reliability** of a measure tells you how precisely you are measuring something, whereas the validity of a measure tells you how accurate the measure is. In this section I'll talk about reliability; we'll talk about validity in in the section on [Assessing the validity of a study].
 
 Reliability is actually a very simple concept. It refers to the repeatability or consistency of your measurement. The measurement of my weight by means of a "bathroom scale" is very reliable. If I step on and off the scales over and over again, it'll keep giving me the same answer. Measuring my intelligence by means of "asking my mum" is very unreliable. Some days she tells me I'm a bit thick, and other days she tells me I'm a complete idiot. Notice that this concept of reliability is different to the question of whether the measurements are correct (the correctness of a measurement relates to it's validity). If I'm holding a sack of potatos when I step on and off the bathroom scales the measurement will still be reliable: it will always give me the same answer. However, this highly reliable answer doesn't match up to my true weight at all, therefore it's wrong. In technical terms, this is a reliable but invalid measurement. Similarly, whilst my mum's estimate of my intelligence is a bit unreliable, she might be right. Maybe I'm just not too bright, and so while her estimate of my intelligence fluctuates pretty wildly from day to day, it's basically right. That would be an unreliable but valid measure. Of course, if my mum's estimates are too unreliable it's going to be very hard to figure out which one of her many claims about my intelligence is actually the right one. To some extent, then, a very unreliable measure tends to end up being invalid for practical purposes; so much so that many people would say that reliability is necessary (but not sufficient) to ensure validity.
 
@@ -386,9 +388,27 @@ Okay, now that we're clear on the distinction between reliability and validity, 
 -   **Parallel forms reliability**. This relates to consistency across theoretically-equivalent measurements. If I use a different set of bathroom scales to measure my weight does it give the same answer?
 -   **Internal consistency reliability**. If a measurement is constructed from lots of different parts that perform similar functions (e.g., a personality questionnaire result is added up across several questions) do the individual parts tend to give similar answers. We'll look at this particular form of reliability later in the book, in @sec-Internal-consistency-reliability-analysis.
 
-Not all measurements need to possess all forms of reliability. For instance, educational assessment can be thought of as a form of measurement. One of the subjects that I teach, *Computational Cognitive Science*, has an assessment structure that has a research component and an exam component (plus other things). The exam component is *intended* to measure something different from the research component, so the assessment as a whole has low internal consistency. However, within the exam there are several questions that are intended to (approximately) measure the same things, and those tend to produce similar outcomes. So the exam on its own has a fairly high internal consistency. Which is as it should be. You should only demand reliability in those situations where you want to be measuring the same thing!
+Not all measurements need to possess all forms of reliability. For instance, educational assessment can be thought of as a form of measurement. One of the subjects that I teach, *Computational Cognitive Science*, has an assessment structure that has a research component and an exam component (plus other things). The exam component is *intended* to measure something different from the research component, so the assessment as a whole has low internal consistency. However, within the exam there are several questions that are intended to (approximately) measure the same things, and those tend to produce similar outcomes. So the exam on its own has a fairly high internal consistency. Which is as it should be. You should only demand reliability in those situations where you want to be measuring the same thing!--->
 
-## 變項的"角色”: 預測變項與結果變項
+
+在這一點上,我們已經稍微思考了一下如何將一個理論構造操作化並從而創建一個心理測量。我們已經看到,通過應用心理測量,我們最終得到變項,這些變項可以有很多不同類型。在這一點上,我們應該開始討論明顯的問題:這個測量有多好?我們將用兩個相關的概念來討論這個問題:信度和效度。簡單地說,一個測量的*信度*告訴你你測量的準確度,而一個測量的效度告訴你這個測量的準確性。在本節中,我將討論信度;我們將在[評估研究效度]一節中討論效度。
+
+信度實際上是一個非常簡單的概念。它指的是你的測量的可重複性或一致性。通過“浴室秤”測量我的體重是非常可靠的。如果我一次又一次地上下秤重,它會持續給出相同的讀數。通過“問我媽”來測量我的智力是非常不可靠的。有些天她會告訴我有點遲鈍,其他天她又說我是個完完全全的白癡。請注意,這個信度的概念與測量是否正確的問題是不同的(測量的正確性與其效度有關)。如果我拿著一袋馬鈴薯上上下下秤重,那麼測量結果仍然是可靠的:它會一直給出相同的答案。然而,這個高度可靠的答案與我的真實體重根本不符,因此它是錯誤的。在技術術語中,這是一種可靠但無效的測量。同樣,雖然我媽媽對我智力的估計有點不可靠,但她可能是對的。也許我真的不太聰明,所以雖然她對我智力的估計每天波動很大,但基本上是正確的。這就是一種不可靠但有效的測量。當然,如果我媽媽的估計太不可靠,要弄清楚她關於我智力的許多說法中哪一個實際上是正確的會非常困難。在某種程度上,一個非常不可靠的測量往往最終在實際目的上是無效的。以至於許多人會說,信度對於確保效度是必要的(但不足夠的)。
+
+好的,現在我們已經清楚了信度和效度之間的區別,讓我們思考一下我們可能測量信度的不同方式:
+
+* **測試-重新測試法**。這與時間的一致性有關。如果在以後重複測量,我們會得到相同的答案嗎?
+
+* **評分者間信度**。這與人與人之間的一致性有關。如果其他人重複測量(例如其他人評估我的智力),他們會得出相同的答案嗎?  
+
+* **複本信度**。這與理論上等效測量之間的一致性有關。如果我用不同的浴室秤來測量我的體重,它會給出相同的答案嗎?
+
+* **內部一致性信度**。如果一個測量由執行類似功能的許多不同部分構成(例如,圍繞幾個問題加總得到的人格問卷結果),各個部分傾向於給出相似的答案。我們將在第15.5節中更詳細地看到這一具體的信度形式。  
+
+並非所有測量都需要具有所有形式的信度。例如,教育評估可以被視為一種測量形式。我教授的一門課程「計算認知科學」的評估結構包含一個研究組成部分和一個考試組成部分(以及其他)。考試部分旨在測量的東西與研究部分不同,因此整體評估的內部一致性較低。然而,在考試中有幾道題目的目的都是(大致)測量相同的東西,這些問題往往會產生相似的結果。因此就考試本身而言,內部一致性較高。這也是應該的。您只應在想要測量相同事物的情況下才要求信度!
+
+
+## 變項的"角色": 預測變項與結果變項
 
 I've got one last piece of terminology that I need to explain to you before moving away from variables. Normally, when we do some research we end up with lots of different variables. Then, when we analyse our data, we usually try to explain some of the variables in terms of some of the other variables. It's important to keep the two roles "thing doing the explaining" and "thing being explained" distinct. So let's be clear about this now. First, we might as well get used to the idea of using mathematical symbols to describe variables, since it's going to happen over and over again. Let's denote the "to be explained" variable $Y$, and denote the variables "doing the explaining" as $X_1 , X_2$, etc.
 
@@ -398,11 +418,46 @@ When we are doing an analysis we have different names for $X$ and $Y$, since the
 
 ```{r}
 #| label: tbl-tab2-5
-#| tbl-cap: Variable distinctions
+#| tbl-cap: 變項的各種稱呼
 huxtabs[[2]][[5]] 
 ```
+--->
+
+在離開變項主題之前,我還需要向您解釋一個最後的術語。通常,當我們進行某些研究時,我們最終會得到很多不同的變項。然後,當我們分析數據時,我們通常會嘗試用某些變項來解釋其他某些變項。將“進行解釋的事物”和“被解釋的事物”這兩個角色保持區分是很重要的。所以,讓我們現在就弄清楚這一點。首先,我們不妨習慣使用數學符號來描述變項,因為這種情況會一再發生。我們用 Y 表示“要解釋的”變項,並用 X1,X2 等表示“進行解釋的”變項。  
+
+當我們進行分析時,對於 Y 和 Xi 我們有不同的名稱,因為它們在分析中扮演不同的角色。這些角色的經典名稱是**依變項**(DV)和**自變項**(IV)。IV 是您用於進行解釋的變項(即 Xi),DV 是被解釋的變項(即 Y)。然而,我個人發現這些名稱很可怕。它們既難於記憶,也具有高度誤導性。所以還有其他更吸引我的替代名稱。我在這本書中將使用的術語是**預測變項**和**結果變項**。其思想是您正在嘗試使用預測變項來預測結果變項。[^02-a-brief-introduction-to-research-design-4] 表2.1整理了我所知道的所有術語稱呼。  
+
+[^02-a-brief-introduction-to-research-design-4]: 然而讓人惱火的是,外面使用了很多不同的名稱。我不會列出所有這些名稱——這樣做沒有意義——只是要指出,“反應變項”有時會用於我所使用的“結果變項”。唉。恐怕這種術語混亂的情況很常見。(這段附註主要強調現實情況中會出現許多不同的變項名稱,可能造成概念和術語的混淆。作者列舉了“反應變項”有時也會用來指稱“結果變項”,但沒有羅列所有可能的名稱變體,因為這沒有意義。最後表達了這類術語混亂現象很常見的無奈。)
+
+
+```{=html}
+<table width="50%" border="1" >
+  <caption>表2.1 變項的各種稱呼</caption>
+	<tr>
+		<th> </th>
+		<th>變項的“角色”</th>
+		<th>古典名稱</th>
+		<th>現代名稱</th>
+	</tr>
+	<tr>
+		<th>“要解釋的”</th>
+		<td>“進行解釋的”</td>
+	</tr>
+	<tr>
+		<th>依變項(DV)</th>
+		<td>自變項(IV)</td>
+	</tr>
+	<tr>
+		<th>結果變項</th>
+		<td>預測變項</td>
+	</tr>
+</table>
+```
+
 
 ## 實驗與非實驗研究
+
+<!---
 
 One of the big distinctions that you should be aware of is the distinction between "experimental research" and "non-experimental research". When we make this distinction, what we're really talking about is the degree of control that the researcher exercises over the people and events in the study.
 
@@ -422,9 +477,31 @@ One distinction worth making between two types of non-experimental research is t
 
 The alternative approach, case studies, aims to provide a very detailed description of one or a few instances. In general, you can't use statistics to analyse the results of case studies and it's usually very hard to draw any general conclusions about "people in general" from a few isolated examples. However, case studies are very useful in some situations. Firstly, there are situations where you don't have any alternative. Neuropsychology has this issue a lot. Sometimes, you just can't find a lot of people with brain damage in a specific brain area, so the only thing you can do is describe those cases that you do have in as much detail and with as much care as you can. However, there's also some genuine advantages to case studies. Because you don't have as many people to study you have the ability to invest lots of time and effort trying to understand the specific factors at play in each case. This is a very valuable thing to do. As a consequence, case studies can complement the more statistically-oriented approaches that you see in experimental and quasi-experimental designs. We won't talk much about case studies in this book, but they are nevertheless very valuable tools!
 
+
+--->
+
+您應該注意的一個重要區別是“實驗研究”和“非實驗研究”之間的區別。當我們做這種區分時,我們真正談論的是研究人員對研究中的人員和事件的控制程度。
+
+### 實驗研究  
+
+實驗研究的關鍵特徵是研究人員控制研究的所有方面,特別是參與者在研究期間的體驗。具體而言,研究人員操縱或改變預測變項,但允許結果變項自然變化。其想法是有意改變預測變項以查看它們是否對結果產生任何因果影響。此外,為了確保預測變項之外的其他事物不會導致結果,其他所有內容都保持不變,或者通過某種方式進行“平衡”,以確保它們不會影響結果。在實踐中,考慮到實驗結果的影響,幾乎不可能想到其他所有可能的影響因素,更不用說將其保持不變。解決此問題的標準方法是隨機化。也就是,我們將人們隨機分配到不同的組中,然後給每個組不同的處理(即為它們分配不同的預測變量值)。我們稍後會更多地談論隨機化,但現在足以說明隨機化所做的是最大程度地減少(但不能消除)組之間存在任何系統差異的可能性。
+
+讓我們考慮一個非常簡單、完全不現實和極其不道德的例子。假設您想弄清是否吸菸會導致肺癌。一種方法是找到吸菸者和不吸菸者並觀察吸菸者的肺癌發病率是否更高。這不是一項適當的實驗,因為研究人員無法很好地控制誰吸菸誰不吸菸。這真的很重要。例如,吸菸者可能也趨向於飲食不健康,或者他們可能從事石棉礦工作等。這裡的重點是,這些組(吸菸者和不吸菸者)在很多方面實際上是不同的,不僅僅是吸菸。因此,吸菸者中肺癌發病率較高可能是由其他原因引起的,並不是吸菸本身引起的。在技術術語中,這些其他因素(如飲食)稱為“混雜因素”,我們很快就會談到這些。  
+
+與此同時,讓我們考慮一下適當的實驗可能是什麼樣子的。回想一下我們的疑慮是,吸菸者和不吸菸者在許多方面可能不同。解決方法是,只要您沒有道德約束,就可以控制誰吸菸誰不吸菸。具體而言,如果我們將年輕的非吸菸者隨機分成兩組,強迫其中一半成為吸菸者,那麼兩組在吸菸與否以外的任何方面都不太可能不同。這樣,如果我們的吸菸組得癌症的比率高於不吸菸組,我們可以相當有信心地認為(a)吸菸確實會導致癌症,(b)我們是凶手。  
+
+### 非實驗研究  
+
+非實驗研究是一個廣泛的術語,包括“任何研究人員缺乏實驗中那樣控制權的研究”。顯然,控制是科學家喜歡擁有的東西,但正如前面的例子所說明的,有很多情況下您無法或不應該嘗試獲得那種控制。由於為了確定是否會得癌症而強迫人們吸菸在道德上是極其不正確的(幾乎肯定是犯罪的),所以這是您真的不應該試圖獲得實驗控制的一個很好的例子。但還有其他原因。即使不考慮道德問題,我們的“吸菸實驗”也確實有其他一些問題。例如,當我建議我們“強迫”一半人成為吸菸者時,我是在談論從一組非吸菸者開始,然後強迫他們成為吸菸者。雖然這聽起來像是瘋狂科學家會喜歡的那種堅實、邪惡的實驗設計,但在調查真實世界中的影響時,這可能不是一種非常合理的方法。例如,假設吸菸只有在飲食不良的人群中才會導致肺癌,並且假設通常吸菸的人確實傾向於飲食不良。然而,由於我們實驗中的“吸菸者”不是“自然”吸菸者(即我們強迫非吸菸者成為吸菸者,但他們沒有採取吸菸者通常傾向於擁有的其他正常生活特徵),他們可能有更好的飲食。因此,在這個愚蠢的例子中,他們不會得肺癌,我們的實驗將失敗,因為它違反了“自然”世界的結構(這種技術性名詞叫做“人為”結果)。
+
+非實驗研究中值得區分的兩種類型是:準實驗研究和案例研究。我之前討論過的例子,即我們想要在不試圖控制誰吸煙誰不吸煙的情況下檢查吸煙者和不吸煙者的肺癌發生率,是一種準實驗設計。也就是說,它與實驗相同,但我們不控制預測變項。我們仍然可以使用統計方法分析結果,但必須更加小心和謹慎。  
+
+另一種方法案例研究旨在詳細描述一個或少數實例。一般來說,您無法使用統計方法分析案例研究的結果,並且通常很難從一些獨立的例子中得出任何關於“一般人”的一般結論。但是,在某些情況下,案例研究非常有用。首先,在某些情況下您別無選擇。神經心理學領域經常遇到這個問題。有時您根本找不到太多具有特定大腦區域損傷的人,所以您唯一能做的就是盡可能詳細和謹慎地描述您確實擁有的那些案例。但是,案例研究也確實有一些真正的優點。因為您沒有太多的研究對象,您有能力投入大量時間和精力來理解每個案例中特定的影響因素。這是一件非常有價值的事。因此,案例研究可以補充您在實驗和準實驗設計中看到的更多統計導向的方法。我們在這本書中不會多談案例研究,但它們仍然是非常有價值的工具!
+
+
 ## 研究的效度
 
-More than any other thing, a scientist wants their research to be "valid". The conceptual idea behind **validity** is very simple. Can you trust the results of your study? If not, the study is invalid. However, whilst it's easy to state, in practice it's much harder to check validity than it is to check reliability. And in all honesty, there's no precise, clearly agreed upon notion of what validity actually is. In fact, there are lots of different kinds of validity, each of which raises it's own issues. And not all forms of validity are relevant to all studies. I'm going to talk about five different types of validity:
+<!---More than any other thing, a scientist wants their research to be "valid". The conceptual idea behind **validity** is very simple. Can you trust the results of your study? If not, the study is invalid. However, whilst it's easy to state, in practice it's much harder to check validity than it is to check reliability. And in all honesty, there's no precise, clearly agreed upon notion of what validity actually is. In fact, there are lots of different kinds of validity, each of which raises it's own issues. And not all forms of validity are relevant to all studies. I'm going to talk about five different types of validity:
 
 -   Internal validity
 -   External validity
@@ -468,11 +545,62 @@ Having just spent the last couple of paragraphs focusing on the choice of partic
 
 ### 生態效度
 
-**Ecological validity** is a different notion of validity, which is similar to external validity, but less important. The idea is that, in order to be ecologically valid, the entire set up of the study should closely approximate the real world scenario that is being investigated. In a sense, ecological validity is a kind of face validity. It relates mostly to whether the study "looks" right, but with a bit more rigour to it. To be ecologically valid the study has to look right in a fairly specific way. The idea behind it is the intuition that a study that is ecologically valid is more likely to be externally valid. It's no guarantee, of course. But the nice thing about ecological validity is that it's much easier to check whether a study is ecologically valid than it is to check whether a study is externally valid. A simple example would be eyewitness identification studies. Most of these studies tend to be done in a university setting, often with a fairly simple array of faces to look at, rather than a line up. The length of time between seeing the "criminal" and being asked to identify the suspect in the "line up" is usually shorter. The "crime" isn't real so there's no chance of the witness being scared, and there are no police officers present so there's not as much chance of feeling pressured. These things all mean that the study definitely lacks ecological validity. They might (but might not) mean that it also lacks external validity.
+**Ecological validity** is a different notion of validity, which is similar to external validity, but less important. The idea is that, in order to be ecologically valid, the entire set up of the study should closely approximate the real world scenario that is being investigated. In a sense, ecological validity is a kind of face validity. It relates mostly to whether the study "looks" right, but with a bit more rigour to it. To be ecologically valid the study has to look right in a fairly specific way. The idea behind it is the intuition that a study that is ecologically valid is more likely to be externally valid. It's no guarantee, of course. But the nice thing about ecological validity is that it's much easier to check whether a study is ecologically valid than it is to check whether a study is externally valid. A simple example would be eyewitness identification studies. Most of these studies tend to be done in a university setting, often with a fairly simple array of faces to look at, rather than a line up. The length of time between seeing the "criminal" and being asked to identify the suspect in the "line up" is usually shorter. The "crime" isn't real so there's no chance of the witness being scared, and there are no police officers present so there's not as much chance of feeling pressured. These things all mean that the study definitely lacks ecological validity. They might (but might not) mean that it also lacks external validity.--->
+
+比任何其他事情都更重要的是,科學家希望他們的研究是“有效的”。效度背後的概念非常簡單。你能相信你的研究結果嗎?如果不能,那麼這項研究就是無效的。然而,雖然效度容易陳述,但在實踐中,檢驗效度要比檢驗信度困難得多。老實說,對於什麼是效度,沒有精確、清晰認同的概念。事實上,有很多不同種類的效度,每一種都提出了自己的問題。並非所有形式的效度都與所有研究相關。我將談論五種不同類型的效度:
+
+- 內在效度  
+- 外在效度
+- 建構效度
+- 表面效度  
+- 生態效度
+
+首先,以下是一個快速指南,說明這里什麼重要。(1)內在效度和外在效度是最重要的,因為它們直接與研究是否真正有效的基本問題相關。(2)建構效度問你是否在測量你想要測量的東西。(3)表面效度本身並不太重要,除非你在意“外觀”。(4)生態效度是表面效度的一種特殊情況,對應於您可能非常在意的某種“外觀”。
+
+### 內在效度  
+
+內在效度是指你能在多大程度上正確得出變量之间的因果關係的結論。之所以稱為“內在”,是因為它指的是研究“內部”事物之間的關係。我們用一個簡單的例子來說明這個概念。假設您有興趣了解大學教育是否能提高寫作能力。為此,您可以找到一些大一學生,要求他們寫一篇1000字的文章,並統計他們的拼寫和語法錯誤數。然後找到一些大三的學生,顯然他們接受過較多的大學教育,重複這個練習。假設結果顯示,大三學生的錯誤更少。所以你得出結論大學教育可以提高寫作技巧。對吧?問題是這項實驗的大問題在於,大三學生年齡更大,而且在寫作方面有更多經驗。所以很難確定真正的因果關係是什麼。年齡大的人寫作能力更好嗎?還是更有寫作經驗的人?或者接受過更多教育的人?大三學生表現更好的真正原因是什麼?年齡?經驗?教育?你無法分辨。這是內部效度失敗的一個例子,因為你的研究沒有很好地分解不同變量之間的因果關係。
+
+### 外在效度  
+
+外在效度與研究結果的普適性或適用性相關。也就是說,您希望在“現實生活”中觀察到的結果模式與您在研究中觀察到的模式相似的程度。更精確地說,心理學中您進行的任何研究都將涉及相當具體的問題或任務集,將發生在特定環境中,並將從特定亞群(遺憾的是經常是大學生!)中抽取參與者。所以,如果結果實際上並不能推廣或應用於您研究之外的人和情況,那麼您就會遇到外部效度不足的問題。  
+
+這個問題的典型例子是,心理學研究中很大一部分都僅僅使用本科心理學專業的學生作為參與者。顯然,研究人員不僅關心心理學專業的學生。他們關心所有人。考慮到這一點,只使用心理學專業學生作為參與者的研究都存在缺乏外在效度的風險。也就是說,如果心理學專業的學生在某些相關方面與一般人口有“特殊之處”,我們可能會擔心缺乏外在效度。  
+
+即便如此,絕對關鍵的是要意識到,只使用心理學專業學生的研究不一定存在外在效度問題。我稍後會再次談到這個問題,但這是一個大家都傾向於最擔心的大問題,所以我在此提到。如果滿足以下兩個條件,選擇的人群會對研究的外在效度構成威脅:(a)您抽樣的人群範圍很窄(例如心理學專業的學生);(b)您抽樣的狹窄人群在某些與您要研究的心理現象相關的方面與一般人群有系統差異。很多人忘記了斜體部分。心理學本科生確實在許多方面不同於一般人群,所以只使用心理學專業學生的研究可能存在外在效度問題。然而,如果這些差異與您正在研究的現象關係不大,那麼就沒有可擔心的。為了使這一點更具體,這裡有兩個極端的例子:
+
+- 您想衡量“公眾對心理治療的態度”,但所有參與者都是心理學專業的學生。這項研究幾乎肯定存在外在效度問題。
+
+- 您想測量視覺錯覺的有效性,而您的參與者全部是心理學專業的學生。這項研究不太可能存在外在效度問題。
+
+剛剛花了幾段話來討論選擇參與者的問題,因為這是每個人都傾向於最擔心的大問題,所以值得記住外在效度是一個更廣泛的概念。根據你正在進行的研究類型,以下示例也可能對外在效度構成威脅:
+
+- 人們可能以與現實生活中不同的方式回答“心理學問卷”。
+
+- 您實驗室中關於(例如)“人類學習”的實驗結構與人們在現實生活中面臨的學習問題不同。
+
+### 建構效度  
+
+建構效度基本上是測量您是否正在測量您要測量的東西的問題。如果一項測量實際上正在測量正確的理論構造,則它具有良好的建構效度;如果未測量,則建構效度不好。舉一個非常簡單(如果荒謬)的例子,假設我正在試圖調查大學生在考試中作弊的比率。我嘗試測量作弊學生的方法是讓他們在課堂上站起來,以便我能計算他們的人數。當我在一個有300名學生的課上這樣做時,沒有人聲稱自己是作弊者。所以我斷定我這門課作弊者的比例為0%。顯然,這有點荒謬。但要點在這裡並不是這個例子有多深刻,而是要說明什麼是建構效度。我的測量方法的問題在於,雖然我正在試圖測量“作弊率”,但我實際上測量的是“愚蠢到承認作弊的人,或者頑固到假裝自己作弊的人的比例”。顯然,這兩者不是一回事!所以我的研究出錯了,因為我的測量建構效度非常差。
+
+### 表面效度  
+
+表面效度僅僅指一種測量是否“看起來”像在做它應該做的事情,沒有更多。如果我設計了一個智力測試,人們看了說“不,那個測試不測量智力”,那麼這種測量就缺乏表面效度。就這麼簡單。顯然,從嚴格科學的角度來看,表面效度並不太重要。畢竟,我們關心的是這種測量是否真正能做到它應該做的事,而不是它是否看起來能做它應該做的事。結果,我們通常不太在意表面效度。即便如此,表面效度的概念在實踐中有三個有用的作用:
+
+- 有時,有經驗的科學家會有一種“直覺”,認為某種測量無法起作用。雖然這些直覺在嚴格意義上沒有證據價值,但聽從它們通常是值得的。因為人們通常具有難以言喻的知識,所以即使你說不出為什麼,也可能存在值得擔憂的地方。換句話說,當您信任的人批評您的研究缺乏表面效度時,值得花點時間更仔細地考慮您的設計,看您是否可以想出可能出錯的原因。當然,如果您找不到任何值得擔憂的原因,那麼您可能就不必擔心。畢竟,表面效度實際上並不太重要。 
+
+- 通常(很常見),完全不明白的人也會有一種你的研究很爛的“直覺”。並且他們會在網絡上或其他地方批評你。仔細檢查後,您可能會注意到這些批評實際上完全集中在研究的“外觀”上,而不是更深層次的東西。表面效度的概念對於溫和地向人們解釋他們需要進一步論證自己的論點很有用。
+
+- 在上一點的基礎上,如果非專業人士的看法很關鍵(例如,應用研究通常希望說服決策者某些事情),那麼您必須關心表面效度。是否你喜歡與否,很多人都會將表面效度用作效度的替代。如果您想讓政府依據科學心理學理由改變某項法律,那麼您研究的“真實”質量並不重要。如果它們缺乏表面效度,您會發現政治家會忽略您。當然,政策通常更依賴外觀而不是事實是有點不公平的,但情況就是如此。
+
+### 生態效度  
+
+生態效度是另一種效度概念,類似於外在效度,但重要性較低。其思想是,為了具有生態效度,研究的整個設置應該嚴格地近似於正在調查的現實世界情景。從某種意義上講,生態效度是表面效度的一種。它主要與研究是否“看起來”正確有關,但有些更嚴謹。為了具有生態效度,研究在相當具體的方式下必須“看起來”正確。其背後的直覺是,具有生態效度的研究更有可能具有外在效度。當然,這並不是保證。但生態效度的好處在於,與檢驗研究是否具有外在效度相比,檢驗研究是否具有生態效度要容易得多。一個簡單的例子是目擊者辨認研究。這些研究中大多數倾向於在大學環境中進行,通常觀察的面孔數量較少,而不是警方的直排檢驗。見到“罪犯”和被要求從“直排檢驗”中辨認嫌疑人之間的時間差也通常更短。“犯罪”不是真的,所以目擊者不可能感到害怕,也沒有警察在場,所以感到壓力的可能性也小得多。所有這些意味著該研究肯定缺乏生態效度。它們可能(但可能不會)意味著它也缺乏外在效度。
+
 
 ## 混淆、人為結果、以及各種降低效度的因素
 
-If we look at the issue of validity in the most general fashion the two biggest worries that we have are *confounders* and artefacts. These two terms are defined in the following way:
+<!---If we look at the issue of validity in the most general fashion the two biggest worries that we have are *confounders* and artefacts. These two terms are defined in the following way:
 
 -   **Confounder:** A confounder is an additional, often unmeasured variable[^02-a-brief-introduction-to-research-design-5] that turns out to be related to both the predictors and the outcome. The existence of confounders threatens the internal validity of the study because you can't tell whether the predictor causes the outcome, or if the confounding variable causes it.
 -   **Artefact:** A result is said to be "artefactual" if it only holds in the special situation that you happened to test in your study. The possibility that your result is an artefact describes a threat to your external validity, because it raises the possibility that you can't generalise or apply your results to the actual population that you care about.
@@ -579,10 +707,137 @@ There's one final thing I feel I should mention. While reading what the textbook
 
 [^02-a-brief-introduction-to-research-design-7]: Clearly, the real effect is that only insane people would even try to read *Finnegans Wake*
 
-There's probably a lot more issues like this to think about, but that'll do to start with. What I really want to point out is the blindingly obvious truth that real world science is conducted by actual humans, and only the most gullible of people automatically assumes that everyone else is honest and impartial. Actual scientists aren't usually that naive, but for some reason the world likes to pretend that we are, and the textbooks we usually write seem to reinforce that stereotype.
+There's probably a lot more issues like this to think about, but that'll do to start with. What I really want to point out is the blindingly obvious truth that real world science is conducted by actual humans, and only the most gullible of people automatically assumes that everyone else is honest and impartial. Actual scientists aren't usually that naive, but for some reason the world likes to pretend that we are, and the textbooks we usually write seem to reinforce that stereotype.--->
+
+
+
+如果我們以最廣泛的方式看待效度問題,我們最擔心的兩個大問題是**混淆因素**和人為結果。這兩個術語的定義如下:
+
+- **混淆因素**:混淆因素是額外的、通常未測量的變量[^02-a-brief-introduction-to-research-design-5],最終與預測變量和結果變量都相關。混淆因素的存在會威脅研究的內在效度,因為您無法確定是預測變量導致結果,還是混淆變量導致結果。  
+
+- **人為結果**:如果研究結果僅在您測試的特殊情況下成立,則稱結果為“人為的”。您的結果可能是人為的,這描述了對您的外在效度的威脅,因為它提出了您無法將結果推廣或應用到您所關心的實際人群的可能性。
+
+[^02-a-brief-introduction-to-research-design-5]: 我之所以說它通常未被測量,是因為如果您已經測量了它,那麼您可以使用一些高深的統計技巧來處理混淆因素。由於存在這些統計方法來解決混淆因素問題,我們經常將已經測量和處理的混淆因素稱為協變量。處理協變量是更高級的話題,但我想順便提一下,因為知道這些東西的存在還是令人欣慰的。
+
+總的來說,混淆因素更多地使非實驗研究感到擔憂,正是因為它們不是適當的實驗。按定義,您將許多事情都未受控制,所以您的研究中存在大量混淆因素的可能性。實驗研究往往更不容易受到混淆因素的影響。您對研究過程的控制程度越高,就越能防止混淆因素影響結果。例如,通過隨機分配,混淆因素在不同組之間隨機且均勻地分佈。  
+
+但是,萬事都有利弊。當我們開始考慮人為結果而不是混淆因素時,情況剛好完全相反。人為結果往往更使實驗研究而不是非實驗研究感到擔憂。為了理解這一點,認識到許多研究之所以是非實驗的,正是因為研究人員正試圖在更自然的環境中檢查人類行為。通過在更加真實的環境中操作,您會失去實驗控制(使您容易受到混淆因素的影響),但因為您傾向於在“野外”學習人類心理學,所以您減少了獲得人為結果的可能性。或者,以另一種方式說,當您將心理學從野外帶入實驗室(我們通常必須這樣做以獲得實驗控制)時,您總是有意外研究與您想要研究的內容不同的風險。  
+
+但是,以上只是一個大致的指南。實驗中絕對有可能出現混淆因素,並且非實驗研究也可能會產生人為結果。由於各種原因,這種情况可能會發生,其中不 least 的是研究人員或研究人員的错误。在實踐中,提前考慮所有事情真的很困難,即使非常出色的研究人員也會犯錯誤。  
+
+儘管幾乎可以將任何威脅效度的事情表述為混淆因素或人為結果,但它們是相當模糊的概念。所以,讓我們看一下一些最常見的示例。
+
+### 歷史效應  
+
+**歷史效應**指的是研究過程中可能發生特定事件,從而可能影響結果測量的可能性。例如,在預測結果和事後結果之間可能會發生一些事情。或者在測試第23位參與者和第24位參與者之間。或者,您可能正在查看舊的完全有效的研究文獻,但自那以後世界已經發生了足夠的變化,以致結論不再值得信賴。屬於歷史效應的事情示例包括:  
+
+- 您對人們如何看待風險和不確定性感興趣。您於2010年12月開始收集數據。但是找到參與者和收集數據需要時間,所以您在2011年2月仍在尋找新的人。不幸的是(對您和其他人來說),2011年1月昆士蘭洪水導致數十億美元的損失和許多人死亡。自然地,2011年2月測試的人對處理風險的信念與2010年12月測試的人有很大不同。這其中(如果有的話)哪個反映了參與者的“真實”信念?我認為答案可能都是。昆士蘭洪水確實改變了澳大利亞公眾的信念,儘管可能只是暫時的。這裡的關鍵是,2月受測者的“歷史”與12月受測者的情況截然不同。  
+
+- 您正在測試一種新的抗焦慮藥物的心理影響。所以,在給藥前,您通過自我報告和生理測量來測量焦慮。然後您給藥,事後採取相同的測量。但是,在此過程中,因為您的實驗室在洛杉磯,發生了地震,增加了參與者的焦慮。
+
+### 發展成熟效應  
+
+與歷史效應一樣,**發展成熟效應**根本上與時間的變化有關。然而,成熟效應不是對特定事件的反應。相反,它們與人們隨時間自行變化有關。我們會變老、疲憊、厭倦等。成熟效應的一些示例包括:  
+
+- 在進行發展心理學研究時,您需要意識到兒童成長得相當迅速。因此,假設您想弄清某些教育技巧是否可以幫助3歲兒童的詞彙量。您需要知道的一件事是,僅憑自己,這個年齡的兒童的詞彙量以難以置信的速度增長(每天多個詞)。如果在設計研究時沒有考慮這種成熟效應,那麼您將無法確定您的教育技巧是否有效。  
+
+- 當在實驗室中運行非常長時間的實驗(比如3小時)時,人們很可能會開始感到厭倦和疲憊,並且這種成熟效應會導致表現下降,而與實驗中發生的任何其他事情無關。
+
+### 重覆測試效應  
+
+歷史效應的一種重要類型是**重覆測試效應**。假設我想對某些心理構造(例如焦慮)進行兩次測量。我可能會擔心的是,第一次測量是否會對第二次測量產生影響。換句話說,這是一種歷史效應,其中影響第二次測量的“事件”本身就是第一次測量!這並不少見。這方面的示例包括:  
+
+- 學習和實踐:例如,由於參與者在第一次測試期間學會了如何解決“智力測試類”問題的一般規則,所以第二次的“智力”可能看起來比第一次高。  
+
+- 測試情景的熟悉度:例如,如果人們在第一次時感到緊張,這可能會使表現下降。但是在度過了第一次測試情況後,他們可能會變得很平靜,就是因為他們已經看到了測試的樣子。  
+
+- 測試導致的輔助變化:例如,如果衡量情緒的問卷很枯燥,那麼第二次測量時報告的情緒更有可能是“厭倦”,確切地是由于第一次測量的枯燥。
+
+### 選擇偏誤  
+
+**選擇偏誤**是一個相當廣泛的術語。假設您運行一項實驗,其中有兩組參與者,每組得到不同的“處理”,並且您想看看不同的處理是否會導致不同的結果。然而,假設儘管您已經盡了最大努力,但在兩組之間仍存在性別失衡(例如,A組為80%的女性和B組為50%的女性)。聽起來這可能永遠不會發生,但相信我,它會發生。這是選擇偏誤的一個例子,其中被“選擇進入”兩組的人具有不同的特點。如果這些特點中的任何一個被證明相關(例如,您的處理對女性的效果比對男性更好),那麼您會遇到大麻煩。
+
+
+### 個體特質差異
+
+在考慮淘汰效應時,區分兩種不同類型有時很有幫助。第一種是**同質淘汰**,其中淘汰效應對所有組、處理或條件都是相同的。在我上面給出的示例中,如果(且僅當)容易感到厭倦的參與者以相似的速度從我的實驗中的所有條件中退出,則該淘汰將是同質的。通常,同質淘汰的主要影響可能是使您的樣本不代表性。因此,您最大的擔心是結果的普適性降低。換句話說,您失去了外在效度。  
+
+第二種淘汰類型是**異質淘汰**,其中淘汰效應對不同組有所不同。更常被稱為**差異淘汰**,這是一種由研究本身引起的選擇偏誤。假設,在心理學歷史上第一次,我成功找到完美平衡和代表性的人樣本。我開始在我的完美樣本上運行“丹妮難以置信的冗長和乏味的實驗”,但由于我的研究非常冗長和乏味,很多人開始退出。我無法阻止這種情況。參與者絕對有權利在任何時候基於任何理由停止任何實驗,作為研究人員,我們在道德和職業上有義務提醒人們他們確實有這個權利。所以,假設“丹妮難以置信的冗長和乏味的實驗”有非常高的退出率。您認為這種退出是隨機的可能性有多大?答案:零。幾乎可以肯定,留下來的人比退出的人更盡責、更能忍受無聊等。在某種程度上(例如),盡責感與我關心的心理現象相關,這種淘汰會降低我研究結果的有效性。  
+
+這裡有另一個示例。假設我設計了一項有兩種條件的實驗。在“治療”條件下,實驗者侮辱參與者,然後給他們一份旨在測量順從性的問卷。在“控制”條件下,實驗者參與了一些無意義的閒聊,然後給他們問卷。不考慮這樣一項研究的可疑科學價值和可疑倫理性,讓我們思考一下這裡可能出什麼問題。 一般而言,當有人當著我的面侮辱我時,我會變得合作性極低。所以,很有可能會有更多人從治療組而不是對照組中退出。這種退出不會是隨機的。最有可能退出的人很可能是那些不太關心完全順從地參加完整實驗的重要性的人。由於最頑固和不順從的人都退出了治療組而沒有退出控制組,我們引入了一個混淆:在治療組實際上完成了問卷的人已經比對照組中的人更有可能是富有責任感和順從的。簡而言之,在這項研究中侮辱人並沒有使他們更加順從。而是使更不順從的人退出了實驗!這項實驗的內部效度完全被破壞。
+
+### 無回應偏誤  
+
+**無回應偏誤**與選擇偏誤和差異淘汰密切相關。這個問題最簡單的版本如下。您向1000人發出調查,但只有300人回复。回复的300人幾乎肯定不是隨機子樣本。回复調查的人與不回复的人在系統上是不同的。這在嘗試從回复者將結論推廣至更廣泛的人群時會引入問題,因為您現在擁有的是一個非常不隨機的樣本。無回應偏誤的問題比這更廣泛。在(比如說)回覆調查的300人中,您可能會發現並非所有人都回答了每個問題。 如果(比如說)80人選擇不回答您的一個問題,這會引入問題嗎?與往常一樣,答案是:可能。如果未回答的問題位於問卷的最後一頁,而那80份調查的最後一頁遺失,則失踪數據可能不是什麼大問題;可能只是頁面脫落了。然而,如果那80人未回答的是調查中最具對抗性或最具侵入性的個人問題,那麼您幾乎肯定面臨問題。 實質上,您在這裡面臨的是所謂的**失踪數據**問題。如果失踪的數據是“隨機遺失的”,那麼這不是什麼大問題。如果它系統性遺失,那麼它可能是個大問題。
+
+### 趨向平均數的迴歸  
+
+**趨向平均數的迴歸**指的是您根據某項測量上的極端值選擇數據的任何情況。由于變量本身有自然變異,這幾乎肯定意味著當您進行後續測量時,後續測量將比第一次測量的結果更不極端,純粹是偶然的。  
+
+這裡有一個示例。假設我對心理學教育是否對非常聰明的孩子有不良影響感興趣。為此,我找到20名大學一年級心理學專業成績最好的學生,並觀察他們在大學的表現如何。結果發現,他們的表現比平均水平好得多,但他們在大學並未高居榜首,儘管他們在高中曾經是頂尖生。這是怎麼回事?最自然的第一個想法是,這一定意味著心理學課程對這些學生產生了不良影響。但是,儘管這很有可能是解釋,但您看到的更可能是“趨向平均數的迴歸”的一個示例。為了理解它的工作原理,讓我們花點時間思考一下在高中或大學課堂上獲得最高分需要什麼條件,而不考慮課堂本身。當一個班級很大時,會有很多非常聰明的人。 要獲得最高分,您必須非常聰明,非常努力,還有一點點運氣。考試必須恰好考到您的特殊技能,而在回答時,您也必須避免犯任何愚蠢的錯誤(我們都會有這種時候)。關鍵在于,雖然智力和努力可以從一門課轉移到下一門課,但運氣不可以。 在高中運氣好的人不會與大學運氣好的人相同。這就是“運氣”的含義。 這個結果是,當您根據某項測量的極端值(前20名學生)選擇人時,您選擇的是努力工作、技能和運氣。 但由於運氣不會轉移到第二次測量(只有技能和工作),所以預期這些人在第二次測量(大學)時的表現都會有所下降。 因此,他們的分數稍有下降,回歸到其他所有人的平均水平。 這就是趨向平均數的迴歸。
+
+令人驚訝的是,趨向平均數的迴歸非常普遍。例如,如果兩個身材高大的人生孩子,他們的孩子往往會比平均水平高,但不如父母高。對於身材矮小的父母則情況相反。兩個身材矮小的父母往往會生矮小的孩子,但這些孩子往往會比父母高。這也可能非常微妙。例如,曾有研究表明,人們從負面反饋中學習效果更好,而不是從正面反饋中。然而,人們嘗試展示這一點的方式是,在人們表現良好時給予正面強化,在人們表現不好時給予負面強化。您會發現,在正面強化後,人們的表現趨向于變差,但在負面強化後,人們的表現趨向于變好。但請注意,這裡存在選擇偏誤!當人們表現非常出色時,您選擇的是“高”值,所以您應該預期,由于趨向平均數的迴歸,無論是否給予強化,下一次試驗的表現都應該變差。同樣,在一次糟糕的試驗後,人們本身就會有改進的趨勢。負面反饋的明顯優越性是由于趨向平均數的迴歸而引起的結果偏差(見 @Kahneman1973 的討論)。
+
+### 實驗者偏誤  
+
+**實驗者偏誤**可以有多種形式。其基本思想是,儘管實驗者存有最好的意圖,但可能會不經意地通過微妙地向參與者傳達“正確答案”或“期望的行為”而最終影響實驗結果。通常,這是因為實驗者擁有參與者所没有的特殊知識,例如問題的正確答案或對參與者所在條件的預期表現模式的了解。這種情況的典型例子是 1907年“聰明的漢斯”(@Pfungst1911)的個案研究。聰明的漢斯是一隻表面上能夠閱讀、計算和執行其他人類智力技能的馬。 在聰明的漢斯走紅後,心理學家開始更仔細地檢查他的行為。事實證明,漢斯不令人驚訝地并不會數學。而是因為人類了解如何計數,當人類改變行為時,馬學會了改變自己的行為。  
+
+解決實驗者偏誤問題的一般方法是進行雙盲研究,其中實驗者和參與者都不知道參與者所在的條件或期望的行為。這為該問題提供了一個非常好的解決方案,但重要的是要認識到這並不完美,也很難完美實現。例如,我嘗試構建雙盲研究的顯而易見的方法是讓我的一名博士生(不了解該實驗的學生)來運行實驗。這看起來應該足夠了。唯一知道所有細節(例如問題的正確答案、參與者與條件的分配)的人(我)與參與者没有交流,與人進行交流的人(博士生)什麼也不知道。除了現實情况是最后一部分不太可能是真的。為了使博士生能夠有效地運行研究,他們需要由我這個研究人員進行指導。而事實上,博士生也了解我,並了解一些我對人和心理學的一般信念(例如,我傾向於認為人類比心理學家給他們的信任更聰明)。由此,實驗者幾乎不可能完全避免知道一點點我的期望。即使一點點知識也會產生影響。假設實驗者不經意地傳遞了參與者預期在這項任務中表現良好的事實。好吧,有一個叫“毕加索效应”的东西,如果你对别人有很高的期望,他们就会努力不负所望。 但是,如果您期望他們失敗,他們也會這樣做。 換句話說,期望成為了自我實現的預言。
+
+好的,注意到原文中有些特殊格式的内容不需要翻译。我翻译了最后四个小节的正文内容,结果如下:
+
+### 需求效應與反應性  
+
+當談到實驗者偏誤時,人們擔心的是實驗者對實驗的知識或期望被傳達給了參與者,並且這些都可能改變人們的行為[@Rosenthal1966]。然而,即使您成功阻止了這種情況的發生,幾乎不可能阻止人們意識到自己是心理學研究的一部分。並且仅仅知道有人在觀察或研究您就可能對行為產生相當大的影響。這通常被稱為**反應性**或**需求效應**。其基本思想是霍桑效應:人們由于研究專注于他們而改變了自己的表現。這個效應的名字來自一項在芝加哥外的“霍桑工廠”進行的研究(見 @Adair1984)。這項20世紀20年代的研究觀察了工廠照明對工人生產力的影響。但重要的是,工人行為的變化是由于工人知道自己被研究了,而不是工廠照明的任何效果。  
+
+為了更具體地說明作為一項研究的一部分會如何改變人們的行為,思考一下社會心理學家的觀點并查看人們在實驗中可能會但在現實生活中卻不會採取的一些角色:  
+
+- **好的參與者**嘗試對研究人員過於樂于助人。他或她試圖找出實驗者的假設並證實它們。  
+
+- **消極參與者**與好參與者完全相反。他或她試圖以某種方式破壞或否定研究或假設。  
+
+- **忠實參與者**異常地順從。無論在更真實的環境中可能發生什麼,他或她都試圖完美遵循說明。
+
+- **戒慎的參與者**對被測試或研究感到緊張,以至於他或她的行為變得非常不自然,或過度符合社會期望。
+
+### 安慰劑效應  
+
+**安慰劑效應**是我們非常擔心的一種特定類型的需求效應。它指的是僅僅被治療的事實就會導致結果的改善。典型的例子來自臨床試驗。如果您給予人們一種完全化學惰性藥物並告訴他們這是某種疾病的治療,那么與完全未治療的人相比,他們的康复速度會更快。換句話說,人們認为自己正在接受治療是导致結果改善的原因,而不是藥物本身。  
+
+然而,醫學界的現在共識是真正的安慰劑效應非常罕見,此前被認為是安慰劑效應的大部分事實上是自然痊愈(有些人自己會好轉)、趨向平均數的迴歸和其他研究設計怪癖的組合。 對心理學感興趣的是,至少存在一些安慰劑效應的最有力證據來自自我報告的結果,最顯著的是治療疼痛 [@hrobjartsson2010]。
+
+### 情境、測量、及小群體效應  
+
+從某些方面講,這些術語是“所有其他外部效度威脅”的通稱。它們指的是您從中抽取參與者的子人群的選擇、運行研究的位置、時間和方式(包括誰收集數據)以及您用於測量的工具都可能會影響結果。 具體而言,人們擔心的是,這些都可能以某種方式影響結果,從而結果無法推廣至更廣泛的人群、地點和測量中。  
+
+### 詐欺、欺暪與自我欺暪  
+
+> [當一個人的薪水依賴於他不理解某件事情時,很難讓他理解這件事。](https://rowansimpson.com/quotes/salary/#:~:text=It%20is%20difficult%20to%20get%20anybody%20to%20understand,on%20them%20not%20understanding%20it.%20%E2%80%94%20Upton%20Sinclair) \
+> - [厄普頓·辛克萊](https://zh.wikipedia.org/zh-tw/%E5%8E%84%E6%99%AE%E9%A1%BF%C2%B7%E8%BE%9B%E5%85%8B%E8%8E%B1)
+
+有一件事我覺得我應該提到。在閱讀文本中關於評估一項研究效度的內容時,我無法不注意到它們似乎假定研究人員是誠實的。我覺得這很有趣。儘管絕大多數科學家都是誠實的,但在我的經驗中,至少也有一些不是。[^02-a-brief-introduction-to-research-design-6] 不僅如此,正如我前面所提到的,科學家也無法免疫信念偏見。研究人員很容易最終愚弄自己相信錯誤的事情,這可能導致他們進行稍有缺陷的研究,然後在撰寫時隱藏這些缺陷。所以您不僅需要考慮公然欺詐的(可能性不大的)可能性,還需要考慮研究無意中“有偏見”的(可能相當常見的)可能性。我翻開了幾本標準教科書,卻沒有找到對此問題的太多討論,所以這裡是我自己嘗試列出這些問題可能出現的幾種方式:  
+
+[^02-a-brief-introduction-to-research-design-6]: 有人可能會認為,如果你不誠實那麼你就不是真正的科學家。這在某種程度上確實是真的,但這是不誠實的(查閱“非真正的蘇格蘭人”謬論)。事實是,有很多人被僱用來充當科學家,他們的工作具有科學的所有標誌,但他們徹頭徹尾地欺詐。通過說他們不是科學家來假裝他們不存在就是迷惑性思維。  
+
+- **資料造假**。有时候,人們會捏造數據。這有時會“本著好意”進行。例如,研究人員認為,捏造的數據確實反映了事實,並且實際上可能反映了實際數據的“略為清理”版本。在其他情況下,欺詐是故意和惡意的。一些被指控或被證明數據造假的高調例子包括:西里爾·伯特(一位據信捏造了部分數據的心理學家)、安德魯·韋克菲爾德(被指控捏造MMR疫苗與自閉症之間聯繫的數據)和黃禹錫(偽造了大量幹細胞研究數據)。   
+
+- **惡作劇**。惡作劇與數據造假有很多相似之處,但它們的目的不同。惡作劇通常是玩笑,其中許多都旨在(最終)被發現。惡作劇的重點通常是為了詆毀某人或某個領域。多年來發生了很多眾所周知的科學惡作劇(例如皮爾當人),有些是故意試圖抹黑特定領域的研究(例如索卡爾事件)。    
+
+- **資料不實**。雖然欺詐佔據了大部分頭條,但在我的經驗中,看到數據被歪曲的情況更為常見。我這麼說不是指報紙報導錯誤(他們確實幾乎總是這樣),而是指出事實上數據並不總是研究人員認為它們所說的那樣。我猜,幾乎總是如此,這不是蓄意不誠實的結果,而是由於數據分析缺乏成熟。例如,回想一下我在這本書開頭討論的辛普森佯謬的示例。人們展示某種“匯總”數據非常常見,有時如果你更深入地找到原始數據,你會發現匯總數據與未匯總數據講述了不同的故事。或者,您可能會發現某些數據被隱藏了,因為它們講述了一個不方便的故事(例如,研究人員可能選擇不提及某個特定變量)。這方面有很多變體,其中許多非常難以檢測。    
+
+- **“不良”研究設計**。好吧,這一點很微妙。基本上,這裡的問題在於研究人員設計了一項內在缺陷的研究,而這些缺陷在論文中從未報告。報告的數據是完全真實的並正確分析的,但它們是由一個實際上組織錯誤的研究產生的。研究人員真的想找到特定效應,所以研究的設定方式使其“容易”人為地觀察到該結果。為了幫助您學習欺詐,我可以給你一個小竅門,那就是設計一項實驗,讓參與者很明顯知道他們「應該」做什麼,然後讓反應性為你發揮魔力。如果您要的話,可以添加所有雙盲實驗的外觀,但這並没有什麼區別,因為研究材料本身就在微妙地告訴人們您希望他們做什麼。當您寫出結果時,欺詐對讀者並不明顯。當參與者身臨其境時對他們很明顯的東西,對閱讀論文的人來說並不總是那麼明顯。當然,我描述這點的方式讓它聽起來總是欺詐。可能確實有一些情況是故意這樣做的,但在我的經驗中,更大的擔憂來自於非故意的錯誤設計。研究人員確實相信某些事情,所以研究恰好最終出現了內在缺陷,而當研究被撰寫並發表時,這些缺陷就神奇地抹去了。    
+
+- **資料探勘與後設假設檢定**。研究作者或多或少歪曲數據的另一種方式是從事所謂的“數據挖掘”(見 @Gelman2014 的更廣泛討論,作為統計分析中的“岔路花園”的一部分)。正如我們稍後將討論的那樣,如果您不斷嘗試以許多不同方式分析數據,最終您會找到某些“看起來像”真實結果但實際上不是的東西。這被稱為“數據挖掘”。由於數據分析曾經需要幾周時間,所以它曾經相當罕見,但現在每個人的電腦上都有非常強大的統計軟件,所以它正在變得越來越普遍。數據探勘本身並不是“錯誤的”,但您探勘得越多,風險就越大。這裡錯誤並且我懷疑很常見的是未承認的數據探勘。也就是說,研究人員進行了人類所知的每種可能的分析,找到了起作用的,然後假裝這是他們唯一進行過的分析。更糟糕的是,他們通常會在查看數據後“發明”一個假設來掩蓋數據挖掘。但我想澄清的是,看到數據後改變你的信念並不是錯誤的,並基於新的“後設”假設來重新分析數據也不是錯誤的。錯誤(並且我懷疑很常見)的是未承認你這樣做了。如果您承認自己這樣做了,其他研究人員就能考慮到您的行為。如果你不承認,他們就不能。這使您的行為具有欺騙性。很糟糕!     
+
+- **發表偏誤與自我審查**。最后,一种无所不在的偏见就是不報告負面結果。這几乎是不可能預防的。期刊不會發表提交給他們的每一篇文章。他們喜歡發表那些發現了“某事物”的文章。所以,如果有20人做一次實驗,研究閱讀《芬尼根的守靈夜》是否會導致人類瘋狂,其中19人發現不會,你認為哪一篇文章會被發表?顯然,它是那一項確實發現《芬尼根的守靈夜》會導致瘋狂的研究。[^02-a-brief-introduction-to-research-design-7] 這是發表偏誤的一個示例。由於沒有人發表那19項沒有發現效應的研究,一個天真的讀者永遠不會知道它們的存在。更糟糕的是,大多數研究人員“內化”了這種偏見,並最終會自我審查他們的研究。知道負面結果不會被接受發表,他們甚至從未試圖報告它們。正如我的一位朋友所說“每一項您發表的實驗,您還有10個失敗”。她是對的。關鍵是,雖然其中一些(可能大多數)研究由於枯燥的原因而失敗(例如,您搞砸了某些事情),但其他研究可能是真正的“零”結果,您在撰寫“良好”實驗時應該承認它們。區分兩者通常很難做到。一個很好的起點是 @Ioannidis2005 的一篇題為“為什麼大多數已發表的研究結果是錯誤的”的論文。我也建議您看看 @Kuhberger2014 的工作,他們提供了這種情況在心理學中確實發生的統計證據。   
+
+[^02-a-brief-introduction-to-research-design-7]: 很明顯,真正的效果是只有瘋子才會試圖閱讀《芬尼根的守靈夜》  
+
+關於這方面還有很多問題需要思考,但这對開始來說已經足夠了。我真正想指出的是一個顯而易見的事實,那就是現實世界的科學是由真實的人類進行的,只有最天真的人才會自動假定其他每個人都是誠實和公正的。實際的科學家通常不那麼天真,但由於某些原因,世界喜歡假裝我們很天真,而我們通常編寫的教科書似乎加強了這種刻板印象。  
 
 ## 本章小結
 
+<!---
 This chapter isn't really meant to provide a comprehensive discussion of psychological research methods. It would require another volume just as long as this one to do justice to the topic. However, in real life statistics and study design are so tightly intertwined that it's very handy to discuss some of the key topics. In this chapter, I've briefly discussed the following topics:
 
 -   [Introduction to psychological measurement]. What does it mean to operationalise a theoretical construct? What does it mean to have variables and take measurements?
@@ -593,3 +848,20 @@ This chapter isn't really meant to provide a comprehensive discussion of psychol
 -   [Assessing the validity of a study]. Does your study measure what you want it to? How might things go wrong? And is it my imagination, or was that a very long list of possible ways in which things can go wrong?
 
 All this should make clear to you that study design is a critical part of research methodology. I built this chapter from the classic little book by @Campbell1963, but there are of course a large number of textbooks out there on research design. Spend a few minutes with your favourite search engine and you'll find dozens.
+--->
+
+這一章的目的並不是要全面討論心理研究方法。要充分討論這個話題至少需要另外一本同樣長的書。然而,在現實生活中,統計和研究設計緊密交織在一起,所以討論一些關鍵話題非常方便。在這一章中,我簡要討論了以下內容:  
+
+- [認識心理測量]。操作化理論構想意味著什麼?變量和測量的意義是什麼?   
+
+- [測量尺度]和變項類型。請記住這裡有兩個不同的區分。一是離散數據和連續數據之間的區別,二是四種不同尺度類型(名義、序數、間隔和比率)之間的區別。   
+
+- [測量的信度]。如果我“同樣”測量兩次某事物,應該期望看到相同的結果嗎?只有當我的測量是可靠的時候。但是“同樣”的事物意味著什麼?這就是為什麼我們有不同類型的可靠性。請確保您記住了它們。   
+
+- [變項的"角色": 預測變項與結果變項]。變項在分析中扮演什麼角色?您還記得預測變項和結果變項之間的區別嗎?依變項和自變項之間的區別等等。  
+
+- [實驗與非實驗研究]設計。是什麼讓一項實驗成為實驗?是好看的白色實驗袍,還是與研究人員對變量的控制有關?   
+
+- [研究的效度]。您的研究是否測量了您希望它測量的內容?可能會出什麼問題?我看錯了嗎,還是可能出錯的方式的列表非常長?   
+
+所有這些都應該讓您明白,研究設計是研究方法的一個關鍵部分。我以 @Campbell1963 的經典小書為基礎構建了這一章,但當然還有很多研究設計教科書。在您喜歡的搜索引擎上花幾分鐘,您就會找到幾十本。  
